Lectura y formateo de los datos

--- a/src/notebooks/solution.ipynb
+++ b/src/notebooks/solution.ipynb
@@ -54,27 +54,313 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Solución"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# libraries\n",
+    "sys.path.append(r'..\\common')\n",
+    "import sys\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import datetime as dt\n",
+    "# import common_helper as ch\n",
+    "from IPython.core.interactiveshell import InteractiveShell\n",
+    "from pandas_profiling import ProfileReport\n",
+    "from category_encoders import TargetEncoder\n",
+    "from ipywidgets import FloatProgress\n",
+    "InteractiveShell.ast_node_interactivity = \"all\"\n",
+    "pd.set_option('display.max_rows', 500)\n",
+    "pd.set_option('display.max_columns', 500)\n",
+    "pd.set_option('display.width', 1000)\n",
+    "pd.options.display.float_format = '{:,.2f}'.format"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 0. Lectura datos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: total: 1.62 s\n",
+      "Wall time: 1.64 s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>fecha_i</th>\n",
+       "      <th>vlo_i</th>\n",
+       "      <th>ori_i</th>\n",
+       "      <th>des_i</th>\n",
+       "      <th>emp_i</th>\n",
+       "      <th>fecha_o</th>\n",
+       "      <th>vlo_o</th>\n",
+       "      <th>ori_o</th>\n",
+       "      <th>des_o</th>\n",
+       "      <th>emp_o</th>\n",
+       "      <th>dia</th>\n",
+       "      <th>mes</th>\n",
+       "      <th>anio</th>\n",
+       "      <th>dianom</th>\n",
+       "      <th>tipovuelo</th>\n",
+       "      <th>opera</th>\n",
+       "      <th>siglaori</th>\n",
+       "      <th>siglades</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2017-01-01 23:30:00</td>\n",
+       "      <td>226</td>\n",
+       "      <td>SCEL</td>\n",
+       "      <td>KMIA</td>\n",
+       "      <td>AAL</td>\n",
+       "      <td>2017-01-01 23:33:00</td>\n",
+       "      <td>226</td>\n",
+       "      <td>SCEL</td>\n",
+       "      <td>KMIA</td>\n",
+       "      <td>AAL</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>Domingo</td>\n",
+       "      <td>I</td>\n",
+       "      <td>American Airlines</td>\n",
+       "      <td>Santiago</td>\n",
+       "      <td>Miami</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2017-01-02 23:30:00</td>\n",
+       "      <td>226</td>\n",
+       "      <td>SCEL</td>\n",
+       "      <td>KMIA</td>\n",
+       "      <td>AAL</td>\n",
+       "      <td>2017-01-02 23:39:00</td>\n",
+       "      <td>226</td>\n",
+       "      <td>SCEL</td>\n",
+       "      <td>KMIA</td>\n",
+       "      <td>AAL</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>Lunes</td>\n",
+       "      <td>I</td>\n",
+       "      <td>American Airlines</td>\n",
+       "      <td>Santiago</td>\n",
+       "      <td>Miami</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2017-01-03 23:30:00</td>\n",
+       "      <td>226</td>\n",
+       "      <td>SCEL</td>\n",
+       "      <td>KMIA</td>\n",
+       "      <td>AAL</td>\n",
+       "      <td>2017-01-03 23:39:00</td>\n",
+       "      <td>226</td>\n",
+       "      <td>SCEL</td>\n",
+       "      <td>KMIA</td>\n",
+       "      <td>AAL</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>Martes</td>\n",
+       "      <td>I</td>\n",
+       "      <td>American Airlines</td>\n",
+       "      <td>Santiago</td>\n",
+       "      <td>Miami</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2017-01-04 23:30:00</td>\n",
+       "      <td>226</td>\n",
+       "      <td>SCEL</td>\n",
+       "      <td>KMIA</td>\n",
+       "      <td>AAL</td>\n",
+       "      <td>2017-01-04 23:33:00</td>\n",
+       "      <td>226</td>\n",
+       "      <td>SCEL</td>\n",
+       "      <td>KMIA</td>\n",
+       "      <td>AAL</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>Miercoles</td>\n",
+       "      <td>I</td>\n",
+       "      <td>American Airlines</td>\n",
+       "      <td>Santiago</td>\n",
+       "      <td>Miami</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2017-01-05 23:30:00</td>\n",
+       "      <td>226</td>\n",
+       "      <td>SCEL</td>\n",
+       "      <td>KMIA</td>\n",
+       "      <td>AAL</td>\n",
+       "      <td>2017-01-05 23:28:00</td>\n",
+       "      <td>226</td>\n",
+       "      <td>SCEL</td>\n",
+       "      <td>KMIA</td>\n",
+       "      <td>AAL</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>Jueves</td>\n",
+       "      <td>I</td>\n",
+       "      <td>American Airlines</td>\n",
+       "      <td>Santiago</td>\n",
+       "      <td>Miami</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              fecha_i vlo_i ori_i des_i emp_i             fecha_o vlo_o ori_o des_o emp_o  dia  mes  anio     dianom tipovuelo              opera  siglaori siglades\n",
+       "0 2017-01-01 23:30:00   226  SCEL  KMIA   AAL 2017-01-01 23:33:00   226  SCEL  KMIA   AAL    1    1  2017    Domingo         I  American Airlines  Santiago    Miami\n",
+       "1 2017-01-02 23:30:00   226  SCEL  KMIA   AAL 2017-01-02 23:39:00   226  SCEL  KMIA   AAL    2    1  2017      Lunes         I  American Airlines  Santiago    Miami\n",
+       "2 2017-01-03 23:30:00   226  SCEL  KMIA   AAL 2017-01-03 23:39:00   226  SCEL  KMIA   AAL    3    1  2017     Martes         I  American Airlines  Santiago    Miami\n",
+       "3 2017-01-04 23:30:00   226  SCEL  KMIA   AAL 2017-01-04 23:33:00   226  SCEL  KMIA   AAL    4    1  2017  Miercoles         I  American Airlines  Santiago    Miami\n",
+       "4 2017-01-05 23:30:00   226  SCEL  KMIA   AAL 2017-01-05 23:28:00   226  SCEL  KMIA   AAL    5    1  2017     Jueves         I  American Airlines  Santiago    Miami"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "dateparse = lambda x: dt.datetime.strptime(x, '%Y-%m-%d %H:%M:%S')\n",
+    "schema = {\n",
+    "          'Fecha-I': object,\n",
+    "          'Vlo-I': str, \n",
+    "          'Emp-I': str,\n",
+    "          'Des-I': str, \n",
+    "          'Ori-I': str, #fijo\n",
+    "          'Fecha-O': object,\n",
+    "          'Vlo-O': str,\n",
+    "          'Ori-O': str, #fijo\n",
+    "          'Des-O': str, \n",
+    "          'Emp-O':str, \n",
+    "          'DIA': np.int64, \n",
+    "          'MES': np.int64, \n",
+    "          'AÑO': np.int64, \n",
+    "          'DIANOM': str, \n",
+    "          'TIPOVUELO': str,\n",
+    "          'OPERA': str, \n",
+    "          'SIGLAORI': str, \n",
+    "          'SIGLADES': str\n",
+    "          }\n",
+    "df = pd.read_csv(r'..\\..\\data\\dataset_SCL.csv', dtype=schema, parse_dates=['Fecha-I', 'Fecha-O'], date_parser=dateparse)\n",
+    "df.columns = [name.lower().replace('-', '_').replace('ñ', 'ni') for name in df.columns]\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1. Distribución de los datos."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2. Generación de Columnas Adicionales.\n",
+    "Genera las columnas adicionales y luego expórtelas en un archivo synthetic_features.csv :\n",
+    "- temporada_alta : 1 si Fecha-I está entre 15-Dic y 3-Mar, o 15-Jul y 31-Jul, o 11-Sep y 30-Sep, 0 si no.\n",
+    "- dif_min : diferencia en minutos entre Fecha-O y Fecha-I .\n",
+    "- atraso_15 : 1 si dif_min > 15, 0 si no.\n",
+    "- periodo_dia : mañana (entre 5:00 y 11:59), tarde (entre 12:00 y 18:59) y noche (entre 19:00 y 4:59), en base a\n",
+    "Fecha-I ."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. Composición del atraso."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4. Entrenamiento del modelo."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5. Evaluación del modelo."
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 64-bit",
+   "display_name": "Python 3.9.12 ('venv': venv)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.12"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "2c88e005617ecf3134a70e06dc37a38930ad24933ce48d11325521b6998e5d22"
+    "hash": "468d1cd9f7e14b8d8055963e0468563658a6da367b5ae54c99dbc521388edcde"
    }
   }
  },
