Distribuciòn de los datos

--- a/src/notebooks/solution.ipynb
+++ b/src/notebooks/solution.ipynb
@@ -100,8 +100,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 1.62 s\n",
-      "Wall time: 1.64 s\n"
+      "CPU times: total: 1.66 s\n",
+      "Wall time: 1.67 s\n"
      ]
     },
     {
@@ -302,6 +302,424 @@
    "metadata": {},
    "source": [
     "### 1. Distribución de los datos."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: total: 109 ms\n",
+      "Wall time: 113 ms\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>fecha_i</th>\n",
+       "      <th>vlo_i</th>\n",
+       "      <th>ori_i</th>\n",
+       "      <th>des_i</th>\n",
+       "      <th>emp_i</th>\n",
+       "      <th>fecha_o</th>\n",
+       "      <th>vlo_o</th>\n",
+       "      <th>ori_o</th>\n",
+       "      <th>des_o</th>\n",
+       "      <th>emp_o</th>\n",
+       "      <th>dia</th>\n",
+       "      <th>mes</th>\n",
+       "      <th>anio</th>\n",
+       "      <th>dianom</th>\n",
+       "      <th>tipovuelo</th>\n",
+       "      <th>opera</th>\n",
+       "      <th>siglaori</th>\n",
+       "      <th>siglades</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>68206</td>\n",
+       "      <td>68206</td>\n",
+       "      <td>68206</td>\n",
+       "      <td>68206</td>\n",
+       "      <td>68206</td>\n",
+       "      <td>68206</td>\n",
+       "      <td>68205</td>\n",
+       "      <td>68206</td>\n",
+       "      <td>68206</td>\n",
+       "      <td>68206</td>\n",
+       "      <td>68,206.00</td>\n",
+       "      <td>68,206.00</td>\n",
+       "      <td>68,206.00</td>\n",
+       "      <td>68206</td>\n",
+       "      <td>68206</td>\n",
+       "      <td>68206</td>\n",
+       "      <td>68206</td>\n",
+       "      <td>68206</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>unique</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>584</td>\n",
+       "      <td>1</td>\n",
+       "      <td>64</td>\n",
+       "      <td>30</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>861</td>\n",
+       "      <td>1</td>\n",
+       "      <td>63</td>\n",
+       "      <td>32</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2</td>\n",
+       "      <td>23</td>\n",
+       "      <td>1</td>\n",
+       "      <td>62</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>top</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>174</td>\n",
+       "      <td>SCEL</td>\n",
+       "      <td>SCFA</td>\n",
+       "      <td>LAN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>174</td>\n",
+       "      <td>SCEL</td>\n",
+       "      <td>SCFA</td>\n",
+       "      <td>LAN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Viernes</td>\n",
+       "      <td>N</td>\n",
+       "      <td>Grupo LATAM</td>\n",
+       "      <td>Santiago</td>\n",
+       "      <td>Buenos Aires</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>freq</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>686</td>\n",
+       "      <td>68206</td>\n",
+       "      <td>5787</td>\n",
+       "      <td>37611</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>649</td>\n",
+       "      <td>68206</td>\n",
+       "      <td>5786</td>\n",
+       "      <td>20988</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>10292</td>\n",
+       "      <td>36966</td>\n",
+       "      <td>40892</td>\n",
+       "      <td>68206</td>\n",
+       "      <td>6335</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>2017-07-05 12:11:25.320059648</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2017-07-05 12:20:31.971380992</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>15.71</td>\n",
+       "      <td>6.62</td>\n",
+       "      <td>2,017.00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>2017-01-01 00:15:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2017-01-01 00:04:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>2,017.00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>2017-03-31 12:41:15</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2017-03-31 12:51:15</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>8.00</td>\n",
+       "      <td>3.00</td>\n",
+       "      <td>2,017.00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>2017-07-10 05:30:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2017-07-10 05:37:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>16.00</td>\n",
+       "      <td>7.00</td>\n",
+       "      <td>2,017.00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>2017-10-08 11:18:45</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2017-10-08 11:19:45</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>23.00</td>\n",
+       "      <td>10.00</td>\n",
+       "      <td>2,017.00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>2017-12-31 23:55:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2018-01-01 00:12:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>31.00</td>\n",
+       "      <td>12.00</td>\n",
+       "      <td>2,018.00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>8.78</td>\n",
+       "      <td>3.52</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                              fecha_i  vlo_i  ori_i  des_i  emp_i                        fecha_o  vlo_o  ori_o  des_o  emp_o       dia       mes      anio   dianom tipovuelo        opera  siglaori      siglades\n",
+       "count                           68206  68206  68206  68206  68206                          68206  68205  68206  68206  68206 68,206.00 68,206.00 68,206.00    68206     68206        68206     68206         68206\n",
+       "unique                            NaN    584      1     64     30                            NaN    861      1     63     32       NaN       NaN       NaN        7         2           23         1            62\n",
+       "top                               NaN    174   SCEL   SCFA    LAN                            NaN    174   SCEL   SCFA    LAN       NaN       NaN       NaN  Viernes         N  Grupo LATAM  Santiago  Buenos Aires\n",
+       "freq                              NaN    686  68206   5787  37611                            NaN    649  68206   5786  20988       NaN       NaN       NaN    10292     36966        40892     68206          6335\n",
+       "mean    2017-07-05 12:11:25.320059648    NaN    NaN    NaN    NaN  2017-07-05 12:20:31.971380992    NaN    NaN    NaN    NaN     15.71      6.62  2,017.00      NaN       NaN          NaN       NaN           NaN\n",
+       "min               2017-01-01 00:15:00    NaN    NaN    NaN    NaN            2017-01-01 00:04:00    NaN    NaN    NaN    NaN      1.00      1.00  2,017.00      NaN       NaN          NaN       NaN           NaN\n",
+       "25%               2017-03-31 12:41:15    NaN    NaN    NaN    NaN            2017-03-31 12:51:15    NaN    NaN    NaN    NaN      8.00      3.00  2,017.00      NaN       NaN          NaN       NaN           NaN\n",
+       "50%               2017-07-10 05:30:00    NaN    NaN    NaN    NaN            2017-07-10 05:37:00    NaN    NaN    NaN    NaN     16.00      7.00  2,017.00      NaN       NaN          NaN       NaN           NaN\n",
+       "75%               2017-10-08 11:18:45    NaN    NaN    NaN    NaN            2017-10-08 11:19:45    NaN    NaN    NaN    NaN     23.00     10.00  2,017.00      NaN       NaN          NaN       NaN           NaN\n",
+       "max               2017-12-31 23:55:00    NaN    NaN    NaN    NaN            2018-01-01 00:12:00    NaN    NaN    NaN    NaN     31.00     12.00  2,018.00      NaN       NaN          NaN       NaN           NaN\n",
+       "std                               NaN    NaN    NaN    NaN    NaN                            NaN    NaN    NaN    NaN    NaN      8.78      3.52      0.01      NaN       NaN          NaN       NaN           NaN"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "# Describe\n",
+    "df.describe(include='all', datetime_is_numeric=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: total: 15.6 ms\n",
+      "Wall time: 15.4 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "# pandas profiling\n",
+    "# Discard columns=['vlo_i', 'ori_i', 'ori_o', 'siglaori', 'anio'] because they are not useful\n",
+    "profile = ProfileReport(df.drop(columns=['vlo_i', 'ori_i', 'ori_o', 'siglaori', 'anio']), title=\"Profiling Report\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "36e2076b25de44ed87cc44db1084ea65",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Summarize dataset:   0%|          | 0/5 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d5cc13b1d3684f54969c52e0aecc0186",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generate report structure:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d7b69b5d8a36434488f0e537115019e6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Render widgets:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "01c55c42fab24fd2a3ac8823f39aa234",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(Tab(children=(Tab(children=(GridBox(children=(VBox(children=(GridspecLayout(children=(HTML(valu…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "profile.to_widgets()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Conclusiones**:\n",
+    "\n",
+    "- Dado que los campos de fecha los datos ``ori_i``  ``ori_o`` y ``siglaori`` y `anio` solo tienen valores constantes se excluyen del profiling. \n",
+    "- El campo ``vlo_i`` tambièn se excluye dado que es un identificador que no aporta información.\n",
+    "- Sobre los dos campos de fecha ``fecha_i`` y ``fecha_o`` se observan picos sobre ciertas temporadas (Tambièn se observa con la variable ``mes``)\n",
+    "    * De enero, hasta comienzos de marzo.\n",
+    "    * A mediados de Julio hay un pequeño pico, donde a partir de agosto el número de vuelos aumenta hasta diciembre.\n",
+    "- El campo ```día``` se observa con una baja sobre los ultimos días(Asociado posiblemente a que algunos meses no tienen los 31 días)\n",
+    "- Alta cardinalidad sobre algunas de las variables categoricas, asi como altas correlaciones entre las mismas.\n"
    ]
   },
   {
